--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
-<div>
-    <img width="150" src="logo.svg"></img>
-    <span>Signup</span>
-    <span>About</span>
-    <span>Pricing</span>
-    <span>Support</span>
-</div>
-<br>
-<br>
-<br>
-<br>
-<center>
+<div style="display: flex;
+box-shadow: 2px 1px 2px #eee;
+justify-content: space-between;
+padding-left: 100px; padding-right: 100px;
+">
+    <img width="150px" height="30px" style="padding-top: 15px;" src="logo.svg"></img>
+    <div style="display: flex;">
+        <div style="padding: 20px; color: #666; cursor: pointer;">Signup</div>
+        <div style="padding: 20px; color: #666; cursor: pointer;">About</div>
+        <div style="padding: 20px; color: #666; cursor: pointer;">Product</div>
+        <div style="padding: 20px; color: #666; cursor: pointer;">Pricing</div>
+        <div style="padding: 20px; color: #666; cursor: pointer;">Support</div>
+    </div>
+    </div>
+
+
+<div style="display: flex; justify-content: center; padding-top: 20px;">
     <img src="photo.png" width="800"></img>
-</center>
-<center>
-    <h1>Invest in Everything</h1>
-    <h3>Online platform to invest in stocks, derivatives, mutual funds, and more</h3>
-</center>
-<br>
-<center>
-    <button>Sign up now</button>
-</center>
+</div>
+
+<div style=" display: flex; justify-content: center; padding-top: 20px;">
+    <h1 style="font-weight: 500;">Invest in Everything</h1>
+</div>
+
+<div style="display: flex; justify-content: center; padding-top: 2px;">
+    <h3 style="font-weight: 500;">Online platform to invest in stocks, derivatives, mutual funds, and more</h3>
+</div>
+
+<div style="display: flex; justify-content: center;">
+<div style="
+background-color: #387ed1;
+color: #fff;
+border: 1px solid rgba(0, 0, 0, 0) !important;
+border-radius: 3px; padding: 10px 30px;
+font-size: 20px; cursor: pointer;">Sign up now
+</div>
+</div>
+
